# rs-store

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  rustfmt.toml  v3.0-val-perf-optimized.txt  v3.0-val-perf.txt
examples/: calc_basic.rs  calc_basic_builder.rs  calc_clear_subscribers.rs  calc_concurrent.rs  calc_effect.rs  calc_fn_basic.rs  calc_new_subscriber.rs  calc_query_state.rs  calc_thunk.rs  calc_unsubscribe.rs  dropoldest_if.rs  iter_state.rs  middleware.rs  performance_state_size.rs  simple.rs  store_droppable.rs  store_trait.rs
src/: builder.rs  channel.rs  dispatcher.rs  effect.rs  iterator.rs  lib.rs  metrics.rs  middleware.rs  reducer.rs  selector.rs  store.rs  store_droppable.rs  store_impl.rs  subscriber.rs  test_mock.rs
src/example/: calc.rs  calc_basic.rs  calc_clear_subscribers.rs  calc_concurrent.rs  calc_effect.rs  calc_fn.rs  calc_fn_basic.rs  calc_thunk.rs  calc_unsubscribe.rs
tests/: integration_test.rs
