[package]
name = "rs-store"
# 2.5.0 add WeakDispatcher
version = "2.5.0"
edition = "2021"
authors = ["Changju Lee", "Changju Lee<rookiecj@gmail.com>"]
description = "Redux Store for Rust"
license-file = "LICENSE"
#homepage="https://github.com/rookiecj/rs-store"
#documentation="https://docs.rs/rs-store"
repository = "https://github.com/rookiecj/rs-store"
readme = "README.md"
keywords = ["redux", "store", "rust", "state", "management"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
store-debug = ["store-log"]
store-log = []

[profile.release]
strip = "debuginfo"
#codegen-units = 1   # Reduce number of codegen units to increase optimizations.
# note: only 'staticlib', 'bin', and 'cdylib' outputs are supported with LTO
#lto = true          # Enable Link Time Optimization
#opt-level = 3 # All optimizations # https://doc.rust-lang.org/cargo/reference/profiles.html#opt-level
# panic = 'abort'     # Abort on panic
debug = true # Enable debug symbols. For example, we can use `dwarfdump` to check crash traces.


[dependencies]
thiserror = "1.0"
rusty_pool = { version = "0.7" }
